@@ -2,20 +2,30 @@ package no.nav.tag.tiltaksgjennomforing.infrastruktur.caching;
 
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.annotation.EnableCaching;
+import org.springframework.cache.concurrent.ConcurrentMapCache;
 import org.springframework.cache.concurrent.ConcurrentMapCacheManager;
+import org.springframework.cache.support.SimpleCacheManager;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Arrays;
 import java.util.List;
 
-@Configuration
-@EnableCaching
+// @Configuration
+// @EnableCaching
 public class CachingConfig {
 
-    @Bean
-    public CacheManager cacheManager() {
-        ConcurrentMapCacheManager cacheManager = new ConcurrentMapCacheManager();
-        cacheManager.setCacheNames(List.of("pdlResponse", "geoenhet", "oppfolgingnavn", "oppfolgingsenhet"));
-        return cacheManager;
+   // @Bean
+    public CacheManager tiltakCacheManager() {
+       SimpleCacheManager cacheManager = new SimpleCacheManager();
+       cacheManager.setCaches(
+               Arrays.asList(
+                       new ConcurrentMapCache("pdl"),
+                       new ConcurrentMapCache("norgnavn"),
+                       new ConcurrentMapCache("norggeoenhet"),
+                       new ConcurrentMapCache("arena")
+               )
+       );
+       return cacheManager;
     }
 }
